broken link checker: UI fixed: table head not centered

--- a/assets/scss/components/_broken-links.scss
+++ b/assets/scss/components/_broken-links.scss
@@ -270,6 +270,7 @@
 					&:nth-child(3) {
 						min-width: 160px;
 						justify-content: center;
+						padding: 0;
 					}
 					&:nth-child(4) {
 						min-width: 320px;
